corrigido endpoint de pesquisa e discursos, adicionado mesmo metodo ao swagger
